--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 @import "./components/footer/footer.scss";
 @import "./components/teacher-cards/teacher-cards.scss";
 @import "./components/carousel/carousel.scss";
+@import "./components/modalForm/modalForm.scss";
 
 body {
   background-image: url(./img/bg_effects.png);
