Changing img extension

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,7 +9,7 @@
 @import "./components/modalForm/modalForm.scss";
 
 body {
-  background-image: url(./img/bg_effects.png);
+  background-image: url(./img/bg_effects.webp);
   background-attachment: fixed;
 }
 
